test/Kubernetes.Tests/testassets/https-service-port-protocol/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 443
          - path: /fee
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: https
          - path: /faa
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: default
spec:
  selector:
    app: frontend
  ports:
    - name: https
      port: 443
      targetPort: 443
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: frontend
  namespace: default
subsets:
  - addresses:
      - ip: 10.244.2.38
    ports:
      - name: https
        port: 443
        protocol: TCP
      - name: http
        port: 80
        protocol: TCP
